changelog: record post-1.0.0 JBang and release-pipeline changes
Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>